#6137 closed bug (fixed)
PANIC on boot with intel gfx
Reported by: | oxoocoffee | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Drivers/Graphics/intel_extreme | Version: | R1/Development |
Keywords: | Intel gfx kernel panic | Cc: | |
Blocked By: | Blocking: | ||
Platform: | x86 |
Description
I just tried booting haiku-nightly-hrev37006-x86gcc4hybrid-anyboot.zip and I ma getting is kernel panic. Please see attached serial log.
Attachments (1)
Change History (6)
by , 14 years ago
Attachment: | HaikuCrash.log added |
---|
comment:1 by , 14 years ago
This looks to have been caused by hrev36999, which appears to not take into account that a NULL pointer can be passed in for the physical base parameter.
comment:4 by , 14 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
comment:5 by , 14 years ago
Component: | System/Kernel → Drivers/Graphics/intel_extreme |
---|---|
Version: | R1/alpha2 → R1/Development |
Note:
See TracTickets
for help on using tickets.
Serial log crash