The physical base pointer can be NULL since it's only allocated if certain flags are passed. Fixes regression introduced in r36999 and hopefully ticket #6137. Axel, please review.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@37016 a95241bf-73f2-0310-859d-f6bbb57e9c96